--- a/app/MemberModule/templates/@layout.latte
+++ b/app/MemberModule/templates/@layout.latte
@@ -6,19 +6,20 @@
  * @param array    $flashes  flash messages
  * @param Nette\Web\User $user  current user
  *}
+
+{import '@svg.latte'}
+
 <!DOCTYPE html>
 <html lang="cs">
 <head>
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="initial-scale=1, width=device-width"/>
-	<link rel="shortcut icon" href="{$baseUri}/img/favicon.ico" type="image/x-icon">
 	<link rel="icon" sizes="any" href="{$baseUri}/img/favicon.svg" type="image/svg+xml">
+	{*<link rel="shortcut icon" href="{$baseUri}/img/favicon.ico" type="image/x-icon">*}
 	<link rel="stylesheet" href="{$baseUri}/css/main.css" type="text/css">
-	<link rel="stylesheet" href="{$baseUri}/css/myfont.css">
-	<!--[if IE 7]><link rel="stylesheet" href="{$baseUri}/css/myfont-ie7.css"><![endif]-->
-
 	<link rel="stylesheet" href="{$baseUri}/css/mobile.css" type="text/css" media="screen and (max-width: 900px)">
 	<link rel="stylesheet" href="{$baseUri}/css/mobile.css" type="text/css" media="screen and (orientation: portrait)">
+	<link rel="stylesheet" href="{$baseUri}/css/symbols.css">
 
 	<script src="{$baseUri}/js/jquery.min.js" type="text/javascript"></script>
 	<script src="{$baseUri}/js/jquery.nette.js" type="text/javascript"></script>
@@ -30,21 +31,21 @@
 <body>
 <div id="main">
 	<div id="top">
-		<div id="top_right">
+		<div id="top-right">
 			<span id="profile">
 			  <a n:href="Member:profile"><b>{$user->identity->name} {$user->identity->surname}</b></a> ({$user->id})
 			</span>
 			<a n:href="Sign:out">odhlásit</a>
 		</div>
-		<img src="{$basePath}/img/vzs.svg" alt="VZS ČČK" height="85" width="85">
-		<img src="{$basePath}/img/zralok.svg" alt="VZS JBC" height="85" width="85">
+		<img src="{$baseUri}/img/vzs.svg" alt="VZS ČČK" height="85" width="85">
+		<img src="{$baseUri}/img/zralok.svg" alt="VZS JBC" height="85" width="85">
 		{include #title}
 	</div>
 
 	<ul id="menu" n:inner-foreach="$mainMenu as $item">
 		<li n:if="$user->isInRole($item->role)" n:class="$presenter->isLinkCurrent($item->current) ? current">
 			<a n:href="$item->link" {if $iterator->last}target="_blank"{/if}>
-				<span class="icon icon-{$item->icon}" ></span> {$item->title}
+				{include svg name => $item->icon} {$item->title}
 			</a>
 		</li>
 	</ul>
@@ -55,5 +56,7 @@
 	</div>
 
 </div>
+<script defer src="{$baseUri}/js/svgxuse.js" type="text/javascript"></script>
+{block #bottom}{/block}
 </body>
 </html>
