--- a/app/MemberModule/templates/Akce.default.latte
+++ b/app/MemberModule/templates/Akce.default.latte
@@ -11,6 +11,7 @@ table .headerLike th { vertical-align: middle; padding: 0.1em 0.5em; font-size: 
 table .headerLike .right { font-style: italic; font-size: 1em; }
 
 table .first td { padding-top: 0.5ex; }
+table .first svg.icon { font-size: 120% }
 </style>
 {/block}
 
@@ -18,17 +19,17 @@ table .first td { padding-top: 0.5ex; }
 
 {block #content}
 
-<ul n:if="$user->isInRole('member')" class="buttonMenu"><li><a class="buttonLike" n:href="add"><span class="icon-plus"></span> nová akce</a></li></ul>
+<ul n:if="$user->isInRole('member')" class="buttonMenu"><li><a class="buttonLike" n:href="add">{include svg name => plus} nová akce</a></li></ul>
 
 <p>
-	<span class="buttonLike gray" n:tag-if="!$prev"><a n:tag-if="$prev" class="buttonLike" n:href="default, $prev"><span class="char">«</span> Předchozí</a></span>
+	<span class="buttonLike gray" n:tag-if="!$prev"><a n:tag-if="$prev" class="buttonLike" n:href="default, $prev">{include svg name => backward} Předchozí</a></span>
 	<a n:foreach="$years as $y" n:tag-if="$year != $y" n:href="this, $y">{$y}</a>
-	<span class="buttonLike gray" n:tag-if="!$next"><a n:tag-if="$next" class="buttonLike" n:href="default, $next">Další <span class="char">»</span></a></span>
+	<span class="buttonLike gray" n:tag-if="!$next"><a n:tag-if="$next" class="buttonLike" n:href="default, $next">Další {include svg name => forward}</a></span>
 </p>
 
 {foreach $akceAllList as $old => $akceList}
 <h2 n:if="$akceList">
-    <span class="icon-calendar"></span> {if $iterator->isOdd()}Nastávající akce{else}Proběhlé akce {if $year != INF}{$year}{/if}
+    {include svg name => calendar} {if $iterator->isOdd()}Nastávající akce{else}Proběhlé akce {if $year != INF}{$year}{/if}
 	{/if}
 </h2>
 
@@ -56,35 +57,35 @@ $akce->date_add > $user->getIdentity()->date_last ? 'new',
 <tr class="first"><td>
 {if (!$akce->confirm) and (in_array($akce->id,$orgList) or ($user->isInRole('Confirm')))}
 	{if $akce->confirm}
-		<span class="no-wrap" title="Akce je schválena"><span class="char green icon-ok-circled"></span>
+		<span class="no-wrap" title="Akce je schválena">{include svg name => check-circle, class => green}
 	{else}
-		<span class="no-wrap" title="Akce není schválena"><span class="char red icon-cancel-circled"></span>
+		<span class="no-wrap" title="Akce není schválena">{include svg name => times-circle, class => red}
 	{/if}schválení</span>
 {/if}
 
 	{if $akce->visible}
-		<span class="no-wrap" title="Akce je viditelná veřejnosti"><span class="char green icon-ok-circled"></span>
+		<span class="no-wrap" title="Akce je viditelná veřejnosti">{include svg name => check-circle, class => green}
 	{else}
-		<span class="no-wrap" title="Akce není viditelná veřejnosti"><span class="char red icon-cancel-circled"></span>
+		<span class="no-wrap" title="Akce není viditelná veřejnosti">{include svg name => times-circle, class => red}
 	{/if}viditelnost</span>
 
 {if ($akce->login_mem or $akce->login_org)}
-	<span class="no-wrap" title="Na akci se lze přihlásit"><span class="char green icon-ok-circled"></span>
+	<span class="no-wrap" title="Na akci se lze přihlásit">{include svg name => check-circle, class => green}
 {else}
-	<span class="no-wrap" title="Na akci se lze přihlásit"><span class="char red icon-cancel-circled"></span>
+	<span class="no-wrap" title="Na akci se lze přihlásit">{include svg name => times-circle, class => red}
 {/if}přihlášení</span>
 
 {if $old}
 	{if ($akce->report)or($akce->message)}
-		<span class="no-wrap" title="Akce má vyplněný záznam"><span class="char green icon-ok-circled"></span>
+		<span class="no-wrap" title="Akce má vyplněný záznam">{include svg name => check-circle, class => green}
 	{else}
-		<span class="no-wrap" title="Akce nemá vyplněný záznam"><span class="char red icon-cancel-circled"></span>
+		<span class="no-wrap" title="Akce nemá vyplněný záznam">{include svg name => times-circle, class => red}
 	{/if}záznam</span>
 
 	{if $akce->bill}
-		<span class="no-wrap" title="Akce má vyplněné vyúčtování"><span class="char green icon-ok-circled"></span>
+		<span class="no-wrap" title="Akce má vyplněné vyúčtování">{include svg name => check-circle, class => green}
 	{else}
-		<span class="no-wrap" title="Akce nemá vyplněné vyučtování"><span class="char red icon-cancel-circled"></span>
+		<span class="no-wrap" title="Akce nemá vyplněné vyučtování">{include svg name => times-circle, class => red}
 	{/if}vyúčtování</span>
 {/if}
 
@@ -92,9 +93,9 @@ $akce->date_add > $user->getIdentity()->date_last ? 'new',
 
 <tr><td colspan="2"><b>Organizátoři:</b>
 {block}        
-{foreach $akce->related('akce_member','akce_id')->where('organizator',TRUE) as $org}
+{foreach $akce->related('akce_member', 'akce_id')->where('organizator', TRUE) as $org}
 
-{var $organizator = $org->ref('user','member_id')}
+{var $organizator = $org->ref('user', 'member_id')}
 {if $organizator}{$organizator->surname} {$organizator->name}{sep}, {/sep}{/if}
 {/foreach}{/block}</td><td></td></tr>
 </table>
@@ -103,11 +104,11 @@ $akce->date_add > $user->getIdentity()->date_last ? 'new',
 {/foreach}
 {/foreach}
 <p>
-	<a n:href="Feed:akce" class="buttonLike float-right"><span class="icon-rss char"></span> RSS Akce</a>
+	<a n:href="Feed:akce" class="buttonLike float-right">{include svg name => feed} RSS Akce</a>
 </p>
 
 <p n:if="$year != INF">
-	<a class="buttonLike" n:href="this, INF"><span class="icon-ok char"></span> Zobrazit všechny akce</a>
+	<a class="buttonLike" n:href="this, INF">{include svg name => check} Zobrazit všechny akce</a>
 </p>
 
 
