--- a/app/MemberModule/templates/Ankety.default.latte
+++ b/app/MemberModule/templates/Ankety.default.latte
@@ -16,7 +16,7 @@ table#items .first { font-size: 1.1em;}
 
 {block #content}
 
-<ul class="buttonMenu"><li><a class="buttonLike" n:href="add"><span class="icon-plus"></span> nová anketa</a></li></ul>
+<ul class="buttonMenu"><li><a class="buttonLike" n:href="add">{include svg name => plus} nová anketa</a></li></ul>
 
 <table id="items">
 <tr class="first"><th>Anketa</th><th>Počet hlasů</th><th>Poslední hlas</th></tr>
@@ -30,10 +30,10 @@ table#items .first { font-size: 1.1em;}
 	{*(($post)and($post->member_id == $user->getId())) ? logged*}
 	<td class="col"><a class="noLink" title="{$item->title}{if $item->locked} (uzamčeno){/if}" n:href="Ankety:view,$item->id"><div>
 	<strong class="headerLike">
-		{if $item->locked}<span class="icon-lock"></span>{/if}
+		{if $item->locked}{include svg name => lock}{/if}
 		{$item->title|firstUpper}
 	</strong>
-	<span class="no-wrap"><span class="char">⇨</span> od <b>{$item->member->surname} {$item->member->name}</b></span>
+	<span class="no-wrap">{include svg name => user} <b>{$item->member->surname} {$item->member->name}</b></span>
 	</div></a></td>
 	<td class="center">{$item->related('anketa_member','anketa_id')->count('member_id')}</td>
 	<td class="col">
@@ -43,9 +43,9 @@ table#items .first { font-size: 1.1em;}
 		{$post->date_add|date:'%H:%M %d.%m.%Y'}
 	</strong>
 	
-	<span n:if="$member" class="no-wrap"><span class="char">⇨</span> od <b>
-	{$member->surname} {$member->name}	
-	</b></span>
+	<span n:if="$member" class="no-wrap">
+		{include svg name => user} <b>{$member->surname} {$member->name}</b>
+	</span>
 
 	</div>
 	</td>
@@ -54,7 +54,7 @@ table#items .first { font-size: 1.1em;}
 </table>
 
 <p class="right">
-<a n:href="Feed:ankety" class="buttonLike"><span class="icon-rss"></span> RSS Ankety</a>
+<a n:href="Feed:ankety" class="buttonLike">{include svg name => feed} RSS Ankety</a>
 </p>
 
 {/block}
