--- a/app/MemberModule/templates/Dokumenty.default.latte
+++ b/app/MemberModule/templates/Dokumenty.default.latte
@@ -15,7 +15,7 @@
 			$('.toogleDir').click(function () {
 				$('#folder-'+this.id).toggle();
 
-				el = $('#'+this.id+'>span.icon');
+				el = $('#'+this.id+'>svg.icon');
 				if (el.hasClass('icon-folder')){
 					el.removeClass('icon-folder');
 					el.addClass('icon-folder-open');
@@ -34,11 +34,11 @@
 	{foreach $dir->related($TABLE_DIRECTORIES)->order('name') as $file}
 			<li class="dir">
 				<a id="{$file->id}" class="toogleDir">
-					<span n:class="icon, $root ? 'icon-folder-open' : 'icon-folder'"></span>
+					{include svg name => $root ? 'folder-open' : 'folder'}
 					<strong>{$file->name}</strong>
 				</a>
 				<a n:if="$user->isInRole('board')and($root)" class="float-right" href="{$file->webViewLink}" target="_blank" title="otevřít">
-					<span class="icon-link"></span> otevřít
+					{include svg name => chain} otevřít
 				</a>
 			</li>
 			<ol id="folder-{$file->id}" n:class="!$root ? hide">
@@ -50,9 +50,9 @@
 				<img class="file-icon" height="16" width="16" src="{$file->iconLink}" title="{$file->mimeType}" alt="{$file->mimeType}">
 				<a class="link" title="Datum změny: {$file->modifiedTime|date:'d.m.Y H:i:s'}" href="{$file->webViewLink}">{$file->name}</a>
 				{if ($file->webContentLink)and(!Nette\Utils\Strings::startsWith($file->mimeType, 'application/vnd.google-apps'))}
-					<a class="float-right" href="{$file->webContentLink}" title="stáhnout"><span class="icon-download"></span> stáhnout</a>
+					<a class="float-right" href="{$file->webContentLink}" title="stáhnout">{include svg name => download} stáhnout</a>
 				{else}
-					<a class="float-right" n:href="getPdf $file->id" title="stáhnout jako PDF"><span class="icon-download"></span> stáhnout</a>
+					<a class="float-right" n:href="getPdf $file->id" title="stáhnout jako PDF">{include svg name => download} stáhnout</a>
 				{/if}
 				<small class="description">{$file->description}</small>
 			</li>
