--- a/app/MemberModule/templates/Forum.default.latte
+++ b/app/MemberModule/templates/Forum.default.latte
@@ -32,13 +32,11 @@
 		<td class="author right">
 		{if $post}
 			<div class="no-wrap">
-				{*<a title="profil uživatele" n:href="Nember:view $post->member_id">*}
-				{*<span class="icon-user"><span>*} {$post->member->surname} {$post->member->name}
-				{*<a>*}
+				{$post->member->surname} {$post->member->name}
 			</div>
 			<div class="no-wrap">
 				<a title="{$post->date_add|timeAgoInWords}" n:href="Forum:post,$post->id">
-					<span class="icon-chat-empty"><span> {$post->date_add|date:'%d.%m.%Y %H:%M'}
+					{include svg name => comments-o} {$post->date_add|date:'%d.%m.%Y %H:%M'}
 				</a>
 			</div>
 			<div class="no-wrap">
@@ -56,11 +54,11 @@
 </table>
 
 <p class="float-right">
-	<a n:href="Feed:forum" class="buttonLike"><span class="icon-rss"></span> RSS celého fóra</a>
+	<a n:href="Feed:forum" class="buttonLike">{include svg name => feed} RSS celého fóra</a>
 </p>
 
 <p>
-	<a n:href="search" class="buttonLike"><span class="icon-search"></span> Hledat ve fóru</a>
+	<a n:href="search" class="buttonLike">{include svg name => search} Hledat ve fóru</a>
 </p>
 
 {/block}
