--- a/app/MemberModule/templates/Member.view.latte
+++ b/app/MemberModule/templates/Member.view.latte
@@ -2,6 +2,7 @@
 	<style type="text/css" n:syntax="off">
 		#photo { margin-right: 1em; margin-bottom: 1em;}
 		.out { margin-left: 1em;}
+		.bulletless { list-style-type: none;}
 		#member { width: 75%;}
 	</style>
 	<script type="text/javascript" src="{$basePath}/js/confirm.js"></script>
@@ -11,38 +12,54 @@
 
 {block #content}
 <ul class="buttonMenu">
-	<li><a n:if="(($user->isInRole('admin')or($member->id == $user->getId()))and(!is_null($member->role)))" class="buttonLike" n:href="edit,$member->id"><span class="icon-pencil"></span> editovat</a></li>
-	<li><a n:if="($user->isInRole('board'))and(!is_null($member->role))" class="buttonLike confirm" data-query="Opravdu chcete tohoto člena smazat? Tento krok může vrátit jen admin." n:href="delete,$member->id"><span class="icon-trash"></span> smazat</a></li>
-	<li><a n:if="($user->isInRole('admin'))and(is_null($member->role))" class="buttonLike confirm" data-query="Opravdu chcete tohoto uživatele aktivovat?" n:href="activate,$member->id"><span class="icon-ok"></span> aktivovat</a></li>
-	<li><a n:if="($user->isInRole('board'))and(!is_null($member->role))" class="buttonLike" n:href="resetPassword, $member->id"><span class="icon-lock-open-alt"></span> resetovat heslo</a></li>
+	<li n:if="(($user->isInRole('admin')or($member->id == $user->getId()))and(!is_null($member->role)))">
+		<a class="buttonLike" n:href="edit,$member->id">
+			{include svg name => pencil} editovat
+		</a>
+	</li>
+	<li n:if="($user->isInRole('board'))and(!is_null($member->role))">
+		<a class="buttonLike confirm" n:href="delete,$member->id" data-query="Opravdu chcete tohoto člena smazat? Tento krok může vrátit jen admin.">
+			{include svg name => trash} smazat
+		</a>
+	</li>
+	<li n:if="($user->isInRole('admin'))and(is_null($member->role))">
+		<a class="buttonLike confirm" n:href="activate,$member->id" data-query="Opravdu chcete tohoto uživatele aktivovat?">
+			{include svg name => ok} aktivovat
+		</a>
+	</li>
+	<li n:if="($user->isInRole('board'))and(!is_null($member->role))">
+		<a class="buttonLike" n:href="resetPassword, $member->id">
+			{include svg name => repeat} resetovat heslo
+		</a>
+	</li>
 </ul>
 
 <div n:if="$fileExists" class="float-left" id="photo"><img src="{$basePath}/img/portrets/{$member->id}.jpg" alt="fotografie"></div>
 
 <a class="buttonLike head" n:href="vcf, $member->id" title="stáhnout vizitku ve formátu .vfc">
-	<span class="icon-user"></span> {$member->name} {$member->surname}
+	{include svg name => user} {$member->name} {$member->surname}
 </a>
 
 <div id="member" class="float-left">
 
-	<p><b>Osobní číslo:</b> {$member->id}</p>
+	<p>{include svg name => user} <b>Osobní číslo:</b> {$member->id}</p>
 	{if $user->isInRole('board')}
-		<p><b>Datum narození:</b> {$member->date_born|date:'d.m.Y'} ({$narozeni->format('%y')} let)</p>
-		<ul>
+		<p>{include svg name => calendar} <b>Datum narození:</b> {$member->date_born|date:'d.m.Y'} ({$narozeni->format('%y')} let)</p>
+		<ul class="bulletless">
 			<li n:if="$member->date_add">
-				<b>Datum registrace:</b>
+				{include svg name => calendar-plus-o} <b>Datum registrace:</b>
 				<span title="{$member->date_add|timeAgoInWords}">
 					{$member->date_add|date:'d.m.Y'}
 				</span>
 			</li>
 			<li n:if="$member->date_update">
-				<b>Datum úpravy:</b>
+				{include svg name => calendar-o} <b>Datum úpravy:</b>
 				<span title="{$member->date_update|timeAgoInWords}">
 					{$member->date_update|date:'d.m.Y'}
 				</span>
 			</li>
 			<li n:if="$last_login">
-				<b>Datum posledního přihlášení:</b>
+				{include svg name => calendar-check-o} <b>Datum posledního přihlášení:</b>
 				<span title="{$last_login->date_add|timeAgoInWords}">
 					{$last_login->date_add|date:'d.m.Y H:i'}
 				</span>
@@ -52,10 +69,10 @@
 		<p><b>Věk:</b> {$narozeni->format('%y')}</p>
 	{/if}
 
-	<p><b>Zaměstnání/Škola:</b> {$member->zamestnani}</p>
+	<p>{include svg name => building} <b>Zaměstnání/Škola:</b> {$member->zamestnani}</p>
 
 {if $user->isInRole('member')}
-<h3>Adresa:</h3>
+<h3>{include svg name => map-marker} Adresa:</h3>
 <address class="out">
 	{$member->ulice}<br>
 	{$member->mesto}
@@ -63,9 +80,9 @@
 {/if}
 
 <h3>Kontakty:</h3>
-	<ul>
-		<li n:if="$member->mail"><b>E-mail:</b> <a href="mailto:{$member->mail}">{$member->mail}</a></li>
-		<li n:if="$member->telefon"><b>Telefon:</b> {$member->telefon|number:0:'.':' '}</li>
+	<ul class="bulletless">
+		<li n:if="$member->mail">{include svg name => envelope} <b>E-mail:</b> <a href="mailto:{$member->mail}">{$member->mail}</a></li>
+		<li n:if="$member->telefon">{include svg name => phone} <b>Telefon:</b> {$member->telefon|number:0:'.':' '}</li>
 	</ul>
 
 <div id="poznamka">
