--- a/www/subdom/member/css/main.css
+++ b/www/subdom/member/css/main.css
@@ -2,15 +2,15 @@ body {margin: 0; padding: 0;}
 body, body table {font-family: Verdana,Arial,Helvetica,Calibri,sans-serif; font-size: 90%;}
 #main {min-width: 22em; width: 90%; max-width: 70em; margin: 0 auto; position: relative; padding-bottom: 2em;}
 
-#top {border-bottom: 4px solid #e1001a;}
+#top {border-bottom: 4px solid #e1001a; padding: 0;}
 #top img {padding: 3px;}
 
+#top #top-right {border: solid #e1001a 4px; padding: 1ex; position: relative; top: -1ex;
+border-radius: 0 0 1em 1em; float: right; color: #12397e; font-weight: bold; font-size: 1.2em;}
+#top #top-right a {color: #e1001a}
 
-#top #top_right {border: solid #e1001a 4px; padding: 1ex; position: relative; top: -1ex;
-border-radius: 0 0 15px 15px; float: right; color: #12397e; font-weight: bold; font-size: 1.2em;}
+#top h1 {font-size: 1.8em; color: #e1001a; margin: 1ex 1ex 1ex 0; display: inline-block; vertical-align: 100%;}
 
-#top #top_right a {color: #e1001a}
-    
 #menu {float: left; list-style-type: none; margin: 0; padding: 0; }
 #menu li a {display: block; text-decoration: none; color: inherit;}
 #menu li {background-color: #60afe4; text-decoration: none; border: 1px solid black; 
@@ -30,7 +30,7 @@ width: 100%; display: block; color: white; font-weight: bold; padding: 0.1ex 0.1
 
 #text {padding-top: 0; float: none; margin-left: 13.5em; min-width: 15em;}
 
-.myfont {font-family: myfont;}
+svg.icon { margin: 0 0.4ex; vertical-align: -5%}
 
 .left {text-align: left;}
 .right {text-align: right;}
@@ -50,7 +50,7 @@ width: 100%; display: block; color: white; font-weight: bold; padding: 0.1ex 0.1
 
 .update {font-size: 0.9em; text-align: right; color: gray;}
 
-.char, div.flash:before {font-size: 120%; line-height: 50%; speak: none;}
+div.flash:before {font-size: 120%; line-height: 50%; speak: none;}
 
 #text .texy {font-family: Cambria, 'Times New Roman', Times, Garamond, serif; color: #222; border: 1px solid #ccc; 
 padding: 0 1em; background-color: #fffff6; }
@@ -66,7 +66,6 @@ div#texyPreview.texy {border: none; padding: 0;}
 .buttonMenu {padding: 0; text-align: right;}
 .buttonMenu li {float: right; display: inline; list-style-type: none; margin-left: 1ex; margin-bottom: 1ex;}
 
-#top h1 {font-size: 1.9em; color: #e1001a; margin: 1ex 1ex; display: inline-block; vertical-align: 100%;}
 h2 {font-size: 1.3em; margin-top: 1ex;}
 h3 {font-size: 1em;}
 
