--- a/app/MemberModule/templates/Ankety.default.latte
+++ b/app/MemberModule/templates/Ankety.default.latte
@@ -33,7 +33,7 @@ table#items .first { font-size: 1.1em;}
 		{if $item->locked}{include svg name => lock}{/if}
 		{$item->title|firstUpper}
 	</strong>
-	<span class="no-wrap">{include svg name => user} <b>{$item->member->surname} {$item->member->name}</b></span>
+	<span class="no-wrap"> {$item->member->surname} {$item->member->name}</span>
 	</div></a></td>
 	<td class="center">{$item->related('anketa_member','anketa_id')->count('member_id')}</td>
 	<td class="col">
@@ -43,9 +43,7 @@ table#items .first { font-size: 1.1em;}
 		{$post->date_add|date:'%H:%M %d.%m.%Y'}
 	</strong>
 	
-	<span n:if="$member" class="no-wrap">
-		{include svg name => user} <b>{$member->surname} {$member->name}</b>
-	</span>
+	<span n:if="$member" class="no-wrap">{$member->surname} {$member->name}</span>
 
 	</div>
 	</td>
