--- a/app/MemberModule/templates/Hlasovani.default.latte
+++ b/app/MemberModule/templates/Hlasovani.default.latte
@@ -34,7 +34,7 @@ table#items .first { font-size: 1.1em;}
 	<strong class="headerLike">
 		{if $locked}{include svg name => lock}{/if} {$item->title|firstUpper}
 	</strong>
-	<span class="no-wrap">{include svg name => user} <b>{$item->member->surname} {$item->member->name}</b></span>
+	<span class="no-wrap">{$item->member->surname} {$item->member->name}</span>
 	</div></a></td>
 	<td class="center">{$item->related('hlasovani_member','hlasovani_id')->count('member_id')}</td>
 	<td class="col">
@@ -42,9 +42,7 @@ table#items .first { font-size: 1.1em;}
 	<div class="right" n:if="$post">
 	<strong class="headerLike" title="{$post->date_add|timeAgoInWords}">{$post->date_add|date:'%H:%M %d.%m.%Y'}</strong>
 	
-	<span n:if="$member" class="no-wrap">
-		{include svg name => user} <b>{$member->surname} {$member->name}</b>
-	</span>
+	<span n:if="$member" class="no-wrap">{$member->surname} {$member->name}</span>
 
 	</div>
 	</td>
