--- a/app/MemberModule/templates/@layout.latte
+++ b/app/MemberModule/templates/@layout.latte
@@ -15,7 +15,7 @@
 	<meta http-equiv="content-type" content="text/html; charset=utf-8">
 	<meta name="viewport" content="initial-scale=1, width=device-width"/>
 	<link rel="icon" sizes="any" href="{$baseUri}/img/favicon.svg" type="image/svg+xml">
-	{*<link rel="shortcut icon" href="{$baseUri}/img/favicon.ico" type="image/x-icon">*}
+	<link rel="shortcut icon" href="{$baseUri}/img/favicon.ico" type="image/x-icon">
 	<link rel="stylesheet" href="{$baseUri}/css/main.css" type="text/css">
 	<link rel="stylesheet" href="{$baseUri}/css/mobile.css" type="text/css" media="screen and (max-width: 900px)">
 	<link rel="stylesheet" href="{$baseUri}/css/mobile.css" type="text/css" media="screen and (orientation: portrait)">
