--- a/app/MemberModule/templates/Sign.@layout.latte
+++ b/app/MemberModule/templates/Sign.@layout.latte
@@ -5,7 +5,7 @@
 	<meta http-equiv="content-language" content="cs">
 	<meta name="viewport" content="initial-scale=1, width=device-width"/>
 	<link rel="icon" sizes="any" href="{$baseUri}/img/favicon.svg" type="image/svg+xml">
-	{*<link rel="shortcut icon" href="{$basePath}/img/favicon.ico" type="image/x-icon">*}
+	<link rel="shortcut icon" href="{$basePath}/img/favicon.ico" type="image/x-icon">
 	<title>Přihlášení | VZS Jablonec</title>
 	<link rel="stylesheet" href="{$basePath}/css/main.css" type="text/css">
 	<script src="{$basePath}/js/jquery.min.js" type="text/javascript"></script>
