--- a/app/MemberModule/templates/Mail/newMail.latte
+++ b/app/MemberModule/templates/Mail/newMail.latte
@@ -1,6 +1,6 @@
-{contentType text/plain; charset=utf-8}
-{$text}
+{$text|texy}
 
-_____________________________________________________________
+<hr>
 Zpráva odeslána z informačního systému VZS Jablonec nad Nisou
-https://member.vzs-jablonec.cz/
+<br>
+<a href="https://member.vzs-jablonec.cz/">member.vzs-jablonec.cz</a>
