--- a/app/MemberModule/templates/Feed.albums.latte
+++ b/app/MemberModule/templates/Feed.albums.latte
@@ -5,7 +5,7 @@
 <description>Fotogalerie členů VZS Jablonec</description>
 <item n:foreach="$items as $item">
 	<title>{$item->name}</title>	
-	{var $member = $members[$item->member_id]}
+	{var $member = $users[$item->member_id]}
 	<author>{if $member}{$member->mail} ({$member->surname} {$member->name}{else} info@vzs-jablonec.cz (VZS Jablonec){/if})</author>
 	<link>{link //:Photo:Album:view $item->id.'-'.$item->slug}</link>
 	<guid isPermaLink="false">{$item->id}@{link //:Photo:Album:default}</guid>
